Implementation of Command Line Arguments Parsing (#19)
* Testing branch commit

* Finalised CommandLineArguments class and validated with tests.

* Finalised CommandLineArguments class and validated with tests.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.graphstream/gs-core -->
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
