Implemented test runner class to run app inside IDE

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>Main</mainClass>
+                                    <mainClass>app.Main</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
