--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, A1
+log4j.rootLogger=INFO, A1
 # A1 is set to output to the console.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 # A1 formats output according to a pattern.
